# aitana

./: 404.html  HOW_TO_RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json
aitana_example/: index.html
api/: index.html
docs/: aitana_example.ipynb  api.md  index.md
src/aitana/: __init__.py  ruapehu.py  tilde.py  util.py  wfs.py  whakaari.py
src/aitana/data/: DRZ_scaled_MAVZ.csv  ruapehu_rsam.csv
tests/: test_ruapehu.py  test_tilde.py  test_util.py  test_whakaari.py
