[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitana"
version = "0.0.5"
authors = [
  { name="Yannik Behr", email="y.behr@gns.cri.nz" },
]

description = "Access volcano monitoring data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3",
    "requests",
    "matplotlib",
]

[too.hatch.build]
include = ["src/aitana/data/**"]

[project.optional-dependencies]
dev = ["pytest",
       "mkdocs",
       "mkdocstrings[python]",
       "mkdocs-jupyter"]

[project.urls]
Homepage = "https://github.com/tsc-tools/aitana"
Issues = "https://github.com/tsc-tools/aitana/issues"


[tool.pytest.ini_options]
log_cli = true